added landing page

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,15 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/main.css">-->
+    <link rel="stylesheet" href="styles/mainTemplate.css">
+    <link rel="stylesheet" href="styles/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/owl.carousel.css">
+    <link rel="stylesheet" href="styles/owl.theme.css">
+    <!--<link rel="stylesheet" href="styles/animate.css">-->
+    <link rel="stylesheet" href="styles/nivo-lightbox/nivo-lightbox.css">
+    <link rel="stylesheet" href="styles/nivo-lightbox/nivo-lightbox-theme.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="travelBaeApp">
@@ -21,36 +29,59 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+    <!--<div class="header">-->
+      <!--<div class="navbar navbar-default" role="navigation">-->
+        <!--<div class="container">-->
+          <!--<div class="navbar-header">-->
+
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">-->
+              <!--<span class="sr-only">Toggle navigation</span>-->
+              <!--<span class="icon-bar"></span>-->
+              <!--<span class="icon-bar"></span>-->
+              <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+
+            <!--<a class="navbar-brand" href="#/">travelBae</a>-->
+          <!--</div>-->
+
+          <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">-->
+
+            <!--<ul class="nav navbar-nav">-->
+              <!--<li class="active"><a href="#/">Home</a></li>-->
+              <!--<li><a ng-href="#/about">About</a></li>-->
+              <!--<li><a ng-href="#/">Contact</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--== 4. Header ==-->
+
+    <section class="header" id="header">
+      <div class="navigationbar  navbar-fixed-top">
         <div class="container">
-          <div class="navbar-header">
+          <a href="#/" class="logo">
+            Travel Bae <i class="fa fa-star-o star"></i>
+          </a>
+          <i class="fa fa-bars pull-right" id="iconhideshow"></i>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation"><a href="#header">Home</a></li>
+            <li role="presentation"><a href="#service">Preparation</a></li>
+            <li role="presentation"><a href="#about">Health Centers</a></li>
+            <li role="presentation"><a href="#works">Drug Directory</a></li>
+            <!--      <li role="presentation"><a href="#meet">Meet With Us</a></li> -->
+            <li role="presentation"><a href="#testimonial">Ranking</a></li>
+            <li role="presentation"><a href="#contact">Contact</a></li>
+          </ul>
+        </div> <!-- /.container -->
+      </div> <!-- /.navigation-bar -->
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+    </section> <!-- /#header -->
 
-            <a class="navbar-brand" href="#/">travelBae</a>
-          </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
     <div ng-view=""></div>
-    </div>
+
 
     <div class="footer">
       <div class="container">
@@ -90,6 +121,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/searchcountry.js"></script>
+        <script src="scripts/controllers/myvaccines.js"></script>
+        <script src="scripts/controllers/drugdirectory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
